--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,4 @@
 deusi_platform:
     resource: "@DEUSIPlatformBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /platform
 
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
