Signed-off-by: yvoste <yves.mitaine@nordnet.fr> third day tuto

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,9 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        webmaster: DeusiDev
+        dir_web: '%dir_web%'
 
 # Doctrine Configuration
 doctrine:
