Signed-off-by: yvoste <yves.mitaine@nordnet.fr> Another day

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+deusi_notif:
+    resource: "@DEUSINotifBundle/Resources/config/routing.yml"
+    prefix:   /notif
+
 deusi_platform:
     resource: "@DEUSIPlatformBundle/Resources/config/routing.yml"
     prefix:   /platform
