--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0",
-        "doctrine/doctrine-fixtures-bundle": "~2.3"
+        "doctrine/doctrine-fixtures-bundle": "~2.3",
+        "stof/doctrine-extensions-bundle": "^1.2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
