--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -20,3 +20,9 @@ monolog:
         console:
             type: console
             process_psr_3_messages: false
+            
+doctrine:
+    orm:
+        auto_generate_proxy_classes:  true # <- change to true
+        proxy_dir:            '%kernel.cache_dir%/doctrine/orm/Proxies'
+        proxy_namespace:      Proxies
