--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,3 +18,6 @@ parameters:
     dir_web: "http://localhost/pushNotification_symfony/web"
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+    bentools_webpush.public_key: ~
+    bentools_webpush.private_key: ~
+    
