--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,21 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "bentools/webpush-bundle": "0.3.*",
         "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "~2.3",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "minishlink/web-push": "^2.0",
+        "minishlink/web-push-bundle": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
+        "stof/doctrine-extensions-bundle": "^1.2.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
-        "twig/twig": "^1.0||^2.0",
-        "doctrine/doctrine-fixtures-bundle": "~2.3",
-        "stof/doctrine-extensions-bundle": "^1.2.2"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
